======================================
[3171962] The password expiration warning mechanism now checks for
expiration daily, if enabled. Users will be able to update the entry
directly from the displayed list. When an expired password is 
changed, the expiry date will be cleared unless there is a recurring
password expiry interval, in which case a new expiry date will be
calculated.
[] Filtered views are now updated when an entry's edited, e.g., if an
entry is edited such that it no longer satisfies the filter's
criteria, it will be removed from the display. 
[] The Russian online help has been totally rewritten and updated,
thanks to pm_kan.

Bugs fixed in 3.24.3
====================
[3165889] No longer crashes if search starts with Shift-Enter (search
backwards).
[3148701] Windows installer will now refuse to install on Win2K,
referring user to last supported version on that OS (3.18).
[3115760] Window view is now saved and restored if the user uses the Windows
"Show Desktop" feature.
[] No longer crashes when doing an Undo after a Merge.
[] Ensure Undo/Redo honour the changes to the display of the original change.

New Features for 3.24.1
=======================
[] Allow an entry to be protected against modification even if the database
is opened in read-write mode. See 'Basic Tab' in Edit dialog. In Tree mode,
a number sign (#) after the name indicates the entry is protected. In List mode, the
'Protected' column may be added to the list. A protected entry can not be
edited, renamed or deleted and retains this property if Dragged & Dropped onto
another database.

Changes to Existing Features in 3.24.1
======================================
None

Bugs fixed in 3.24.1
====================
[3132055, 3132347] Fix crash in V3.24

New Features for 3.24
=====================
[3111585] User can now duplicate Groups. Aliases and shortcuts referring to base
entries outside this group will still point to their respective bases. Those