@@ -82,6 +82,13 @@ password expiry interval, in which case a new expiry date will be
 calculated.</td>
 </tr>
 <tr>
+<td align="center" width="100"><a href="nojs.html" onclick="FR(3131935);return false;">3131935</a><br></td>
+<td>Rename of an entry or group in the Tree View can now only be
+performed via the Rename shortcut (default value F2), using the Edit
+menu or the right-click context menu. Edit in place by double clicking
+the entry is no longer allowed to prevent unwanted changes.</td>
+</tr>
+<tr>
 <td align="center" width="100">n/a</td>
 <td>Filtered views are now updated when an entry's edited, e.g., if an
 entry is edited such that it no longer satisfies the filter's
